--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
   "bin": {
     "sync-env": "./dist/index.js"
   },
+  "files": [
+    ".env",
+    "dist"
+  ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc && chmod +x dist/index.js",
+    "prepublish": "npm run build"
   },
   "dependencies": {
     "@octokit/rest": "^20.1.2",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.17.27",
+    "@types/node-fetch": "^2.6.12",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
